<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Weather</string>
    <string name="widget_weather_deskclock">Weather and Clock</string>
    <string name="widget1_weather">Weather</string>
    <string name="action_settings">Settings</string>
    <string name="keyguard_widget_12_hours_format" translatable="false">h\uee01mm</string>
    <!-- Time format strings for fall-back clock widget -->
    <string name="keyguard_widget_24_hours_format" translatable="false">kk\uee01mm</string>

    <string name="default_area">--</string>
    <string name="default_time">00:00</string>
    <string name="default_date">default_date</string>
    <string name="default_temp">--°</string>
    <string name="default_weather">--</string>
    <string name="select_city">选择城市</string>
    <string name="manager_city">管理城市</string>
    <string name="hot_city">热门城市</string>
    <string name="located_city">定位城市</string>
    <string name="hint_search_box">请输入城市名或拼音</string>
    <string name="nothing_found">没有搜索结果~</string>
    <string name="locating">正在定位…</string>
    <string name="located_failed">定位失败</string>
    <string name="cancel">取消</string>
    <string name="add_city">添加城市</string>
    <string name="submit">确定</string>
    <string name="title">提示</string>
    <string name="content">"您确定删除%s吗?"</string>
    <string name="percontent">"请在设置中打开权限后继续!"</string>
    <string name="auther">趣创科技天气网</string>
    <string name="life_index">生活指数</string>
    <string name="sun_and_wind">太阳和风</string>
    <string name="pressure">气压(mb)</string>
    <string name="pressure1">气压</string>
    <string name="wind_direction">风向</string>
    <string name="nitrogen_dioxide">NO₂[二氧化氮]</string>
    <string name="placeholder">--</string>
    <string name="placeholder1">-</string>
    <string name="placeholder2">-°</string>
    <string name="placeholder3">°</string>
    <string name="placeholder4">--°</string>
    <string name="placeholder5">-°/-°</string>
    <string name="sulfur_dioxide">SO₂[二氧化硫]</string>
    <string name="pm10">PM10[可吸入颗粒物]</string>
    <string name="pm25">PM2.5[入肺颗粒物]</string>
    <string name="air_quality">空气质量</string>
    <string name="rainfall">降雨量</string>
    <string name="visibility">能见度</string>
    <string name="humidity">湿度</string>
    <string name="somatosensory_temperature">体感温度</string>
    <string name="detailed_information">详细信息</string>
    <string name="everyday">每日</string>
    <string name="hourly">每小时</string>
    <string name="search_hint">搜索区/县/市/省...</string>
    <string name="save">保存</string>
    <string name="add">添加</string>
    <string name="location_manager">位置管理</string>
    <string name="location_status">正在获取当前位置...</string>
    <string name="location_manager_sample">位置管理[Sample]</string>
    <string name="setting_1">点击天气界面任意位置可选动态天气类型</string>
    <string name="setting_2">关于[Sample]</string>
    <string name="setting_3">桌面小工具[Sample]</string>
    <string name="setting_4">通知栏文字颜色[Sample]</string>
    <string name="setting_5">通知栏状态图标[Sample]</string>
    <string name="setting_6">通知栏天气[Sample]</string>
    <string name="top">top</string>
    <string name="bottom">bottom</string>
    <string name="cond">cond</string>
    <string name="city">city</string>
    <string name="aqi">aqi</string>
    <string name="aqi1">空气</string>
    <string name="update_time">update_time</string>
    <string name="N_A">N/A</string>
    <string name="location">定位</string>
    <string name="hot">热门</string>
    <string name="update_error">更新失败</string>
    <string name="update_sucess">更新成功</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="yesterday">昨天</string>
    <string name="no_data">暂无数据</string>
    <string name="wind_speed">风速</string>
    <string name="wind_level">风级</string>
    <string name="sunrise">日出</string>
    <string name="sunset">日落</string>
    <string name="now">现在</string>
    <string name="release">发布</string>
    <string name="suggestion_drsg">穿衣指数</string>
    <string name="suggestion_uv">紫外线指数</string>
    <string name="suggestion_flu">感冒指数</string>
    <string name="suggestion_cw">洗车指数</string>
    <string name="max_city">若要添加新城市,请移除一个城市</string>
    <string name="widget_no_data">请添加城市</string>
    <string name="no_network">网络未连接</string>
    <string name="monuth_day">%1$s 月 %2$s 日</string>

    <!-- format strings for clocks -->
    <string name="clock_24_hours_format" translatable="false">kk&#58;mm</string>
    <string name="main_widget_12_hours_format" translatable="false">h&#58;mm</string>
    
    <string-array name="settings_array_notification_smallicon">
        <item>天气状况</item>
        <item>温度</item>
    </string-array>
    <string-array name="settings_array_notification_textcolor">
        <item>系统默认</item>
        <item>白色</item>
        <item>黑色</item>
    </string-array>

    <string-array name="week_array">
        <item>周日</item>
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
    </string-array>

    <string-array name="citys_array">
        <item>北京</item>
        <item>上海</item>
        <item>广州</item>
        <item>深圳</item>
        <item>天津</item>
        <item>武汉</item>
        <item>沈阳</item>
        <item>重庆</item>
        <item>杭州</item>
        <item>南京</item>
        <item>哈尔滨</item>
        <item>长春</item>
        <item>呼和浩特</item>
        <item>石家庄</item>
        <item>银川</item>
        <item>乌鲁木齐</item>
        <item>拉萨</item>
        <item>西宁</item>
        <item>西安</item>
        <item>兰州</item>
        <item>太原</item>
        <item>昆明</item>
        <item>南宁</item>
        <item>成都</item>
        <item>长沙</item>
        <item>济南</item>
        <item>南昌</item>
        <item>合肥</item>
        <item>郑州</item>
        <item>福州</item>
        <item>贵阳</item>
        <item>海口</item>
        <item>秦皇岛</item>
        <item>桂林</item>
        <item>三亚</item>
        <item>香港</item>
        <item>澳门</item>
    </string-array>

</resources>
