<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/com.android.weather"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:fillViewport="true" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:divider="@drawable/divider_linearlayout"
        android:orientation="vertical"
        android:showDividers="middle|end" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/w_divider_size"
                android:background="@color/w_divider" />

            <TextView
                android:id="@+id/settings_gps_location"
                style="@style/cell_single_item_text"
                android:text="@string/location_status"
                android:visibility="gone" />
        </LinearLayout>

        <TextView
            android:id="@+id/settings_manage_area"
            style="@style/cell_single_item_text"
            android:text="@string/location_manager_sample" />

        <View
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <com.android.weather.widget.SmoothSwitch
            android:id="@+id/settings_switch_notification"
            style="@style/MxxSettingsCellSmoothSwitch"
            android:checked="true"
            android:text="@string/setting_6" />

        <com.android.weather.widget.LabelSpinner
            android:id="@+id/settings_spinner_smallicon"
            style="@style/cell_layout"
            app:entries="@array/settings_array_notification_smallicon"
            app:titleText="@string/setting_5" >
        </com.android.weather.widget.LabelSpinner>

        <com.android.weather.widget.LabelSpinner
            android:id="@+id/settings_spinner_textcolor"
            style="@style/cell_layout"
            app:entries="@array/settings_array_notification_textcolor"
            app:titleText="@string/setting_4" >
        </com.android.weather.widget.LabelSpinner>

        <View
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <TextView
            android:id="@+id/settings_appwidget"
            style="@style/cell_single_item_text"
            android:text="@string/setting_3" />

        <View
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <TextView
            android:id="@+id/settings_about"
            style="@style/cell_single_item_text"
            android:text="@string/setting_2" />

        <View
            android:layout_width="match_parent"
            android:layout_height="22dp" />
        
        <TextView
            style="@style/cell_single_item_text"
            android:text="@string/setting_1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="22dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/settings_github"
                style="@style/cell_single_item_text"
                android:text="Github" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="0dp"
                android:paddingBottom="8dp"
                android:paddingLeft="16dp"
                android:text="https://github.com/Mixiaoxiao/Weather"
                android:textColor="@color/mxx_text_secondary"
                android:textSize="12dp" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>